--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,10 @@ body {
 	line-height: 1.2;
 }
 
+body::-webkit-scrollbar {
+	display: none;
+}
+
 a {
 	color: inherit;
 	text-decoration: none;
@@ -732,7 +736,7 @@ img {
 }
 
 .footer {
-	padding: 0 50px;
+	padding: 50px 0 50px;
 }
 
 .blog__item--img {
@@ -759,6 +763,8 @@ img {
 .arrow {
 	display: none;
 }
+
+
 
 }
 
